Fittable: * fix an exception caused when reflowing without a container node. * fixed styling so that ToolDecorator's that are given FittableColumnsLayout have vertical-align middle.

--- a/fittable/source/FittableLayout.css
+++ b/fittable/source/FittableLayout.css
@@ -47,6 +47,10 @@
 	white-space: normal;
 }
 
+.enyo-fittable-columns-layout.enyo-tool-decorator > * {
+	vertical-align: middle;
+}
+
 /* repair clobbered white-space setting for pre, code */
 .enyo-fittable-columns-layout > pre, .enyo-fittable-columns-layout > code {
 	white-space: pre;
